--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./src/prefabs/sheep.js"></script>
     <script src="./src/scenes/special.js"></script>
     <script src="./src/scenes/topdown.js"></script>
-    <script src="./src/scenes/play.js"></script>
+    <script src="./src/scenes/load.js"></script>
     <script src="./src/scenes/main.js"></script>
 </head>
 <body>
