complete special scene

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <script src="./src/prefabs/sheep.js"></script>
     <script src="./src/scenes/special.js"></script>
     <script src="./src/scenes/topdown.js"></script>
+    <script src="./src/scenes/ending.js"></script>
     <script src="./src/scenes/load.js"></script>
     <script src="./src/scenes/main.js"></script>
+    <style>
+        body {
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
     
