--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./src/prefabs/player.js"></script>
     <script src="./src/prefabs/sheep.js"></script>
     <script src="./src/scenes/special.js"></script>
+    <script src="./src/scenes/boxing.js"></script>
     <script src="./src/scenes/topdown.js"></script>
     <script src="./src/scenes/ending.js"></script>
     <script src="./src/scenes/load.js"></script>
