setup for boxing endings

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./src/prefabs/sheep.js"></script>
     <script src="./src/scenes/special.js"></script>
     <script src="./src/scenes/boxing.js"></script>
+    <script src="./src/scenes/gameover.js"></script>
     <script src="./src/scenes/topdown.js"></script>
     <script src="./src/scenes/ending.js"></script>
     <script src="./src/scenes/load.js"></script>
