pathing to off screen

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="./src/scenes/boxing.js"></script>    
     <script src="./src/scenes/topdown.js"></script>
     <script src="./src/scenes/street1.js"></script>
+    <script src="./src/scenes/street2.js"></script>
 
 
     <script src="./src/scenes/gameover.js"></script>
